# schedule-bot

./: .env  .gitignore  LICENSE  pyproject.toml  requirements  run.sh  source.py  start.sh
app/: config.py  main.py
app/bot/: bot.py  on_shutdown.py  on_startup.py  safe_polling.py  safe_pooling.py
app/custom_logging/: TelegramHandler.py  TelegramLogHandler.py  setup.py
app/database/: DATABASE_STRUCTURE.md  database.py  db.py  dp.py  init_db  init_db.py  models.py
app/extracting_schedule/: parser.py  worker.py
app/filters/: ContextFilter.py  is_admin.py
app/handlers/: __init__.py  admin.py  bells_schedule.py  clear_users.py  init_handlers.py  my_schedule.py  other_functions.py  professor_schedule.py  registration.py  schedule.py  schedule_today.py  start.py  student_schedule.py  sync.py
app/handlers/admin/: sync.py
app/handlers/cleanup_tables/: clear_other_tables.py  clear_sync_tables.py  clear_users.py
app/handlers/schedule/: professor_schedule.py  student_schedule.py
app/keyboards/: admin_kb.py  base_kb.py  courses.py  courses_kb.py  faculty_kb.py  find_kb.py  init_keyboards.py  main_menu.py  main_menu_kb.py  registration_kb.py  schedule_kb.py  schedule_keyboards.py  sync.py  sync_kb.py
app/middlewares/: UserContextMiddleware.py
app/models/: schedule.py
app/state/: states.py
app/utils/: week_mark.py
app/utils/admins/: admin_list.py
app/utils/custom_logging/: BufferedLogHandler.py  TelegramLogHandler.py  setup.py  setup_log.py
app/utils/extracting_schedule/: fetcher.py  worker.py
app/utils/messages/: safe_delete_messages.py
(+8 files in other folders)
