[project]
name = "schedule-bot"
version = "0.1.0"
description = "University schedule telegram bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.22.0",
    "aiosqlite==0.20.0",
    "greenlet>=3.2.4",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.34",
    "typing-extensions>=4.11.0",
]
